--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,10 +1,11 @@
 <div class="home-intro">
-    <div class="jumbo">{{site.heading}} </div>
-    <div class="home-sub-text"> <h3>
-        Jekyll Garden is a markdown friendly theme lets you publish your Obsidian vault (or a subset of it) as a Jekyll static website. 
-        Check out the <a href="{{'/notes' | relative_url}}"> demo </a>, <a href="{{'/post/features' | relative_url}}"> features </a> and <a href="{{'/post/how-to' | relative_url}}"> how to</a>.
-        </h3> 
-</div> <div class="home-notes">
+        <div class="home-title"> {{site.heading}} </div>
+        <div class="home-sub-title" style="padding: 0px;"> adventures in open source cloud computing </div>
+
+        <div class="home-content no-padding">
+                This website is my digital garden, a half-blog-half-wiki! Here, you'll find my ever-changing working notes, logs of my readings, watchlist, web-finds and more.</div>
+
+<div class="home-notes">
         <a href="{{'/notes' | relative_url}}">
                 <h3 class="home-sub-title arrow-link">
                         <span class="text"> Latest Working Notes</span>
@@ -18,5 +19,11 @@
                 <div class="homelist-feed"> <a href="{{ note.url }}">{{ note.title }}</a></div>
                 {% endfor %}
         </div>
-</div></div>
+</div>
 
+<!-- <div class="home-colln">
+        <h3 class="home-sub-title">
+                Collections
+        </h3> 
+        {%- include Collection.html -%}
+</div>-->
